// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateDiograph given folder path generates diograph and paths from new and old folder files and subfolders 1`] = `
Object {
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-music.mp3": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-text.txt": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-video.mp4": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "new-folder-uuid",
      },
      Object {
        "id": "old-folder-uuid",
      },
      Object {
        "id": "some-file-diory-id-0",
      },
      Object {
        "id": "some-file-diory-id-1",
      },
      Object {
        "id": "some-file-diory-id-2",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "example-folder",
  },
  "new-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-file-diory-id-0",
      },
      Object {
        "id": "some-file-diory-id-1",
      },
      Object {
        "id": "some-file-diory-id-2",
      },
      Object {
        "id": "some-file-diory-id-3",
      },
      Object {
        "id": "some-file-diory-id-4",
      },
      Object {
        "id": "some-file-diory-id-5",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "new-folder",
  },
  "old-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-existing-file-diory-id-0",
      },
      Object {
        "id": "some-existing-file-diory-id-1",
      },
      Object {
        "id": "some-existing-file-diory-id-2",
      },
      Object {
        "id": "some-existing-file-diory-id-3",
      },
      Object {
        "id": "some-existing-file-diory-id-4",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "old-folder",
  },
  "some-file-diory-id-0": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-file-diory-id-1": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-file-diory-id-2": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
}
`;

exports[`generateDiograph given folder path generates diograph and paths from new folder files and subfolders 1`] = `
Object {
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/image-with-24-hour.jpg": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/some-document.docx": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/some-document.odt": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/some-document.pdf": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-3",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/some-image.jpg": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-4",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder/some-sub-folder-image.jpg": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-5",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "new-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-file-diory-id-0",
      },
      Object {
        "id": "some-file-diory-id-1",
      },
      Object {
        "id": "some-file-diory-id-2",
      },
      Object {
        "id": "some-file-diory-id-3",
      },
      Object {
        "id": "some-file-diory-id-4",
      },
      Object {
        "id": "some-file-diory-id-5",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "new-folder",
  },
  "some-file-diory-id-0": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
  "some-file-diory-id-1": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
  "some-file-diory-id-2": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
  "some-file-diory-id-3": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-3",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
  "some-file-diory-id-4": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-4",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
  "some-file-diory-id-5": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-5",
    "modified": "2022-01-01T00:00:00.000Z",
    "text": "generated",
  },
}
`;

exports[`generateDiograph given folder path generates diograph and paths from old folder files and subfolders 1`] = `
Object {
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder/image-with-24-hour.jpg": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder/some-document.docx": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder/some-document.odt": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder/some-document.pdf": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-3",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder/some-image.jpg": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-4",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "old-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-existing-file-diory-id-0",
      },
      Object {
        "id": "some-existing-file-diory-id-1",
      },
      Object {
        "id": "some-existing-file-diory-id-2",
      },
      Object {
        "id": "some-existing-file-diory-id-3",
      },
      Object {
        "id": "some-existing-file-diory-id-4",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "old-folder",
  },
  "some-existing-file-diory-id-0": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-existing-file-diory-id-1": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-existing-file-diory-id-2": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-existing-file-diory-id-3": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-3",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-existing-file-diory-id-4": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-existing-file-diory-id-4",
    "modified": "2022-01-01T00:00:00.000Z",
  },
}
`;

exports[`generateDiograph given folder path generates diograph from example folder files and subfolders 1`] = `
Object {
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/new-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/old-folder": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-music.mp3": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-text.txt": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "LocalClient/Users/op/2023/diory/folder-generator/src/__fixtures__/example-folder/some-video.mp4": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "new-folder-uuid",
      },
      Object {
        "id": "old-folder-uuid",
      },
      Object {
        "id": "some-file-diory-id-0",
      },
      Object {
        "id": "some-file-diory-id-1",
      },
      Object {
        "id": "some-file-diory-id-2",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "example-folder",
  },
  "new-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "new-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-file-diory-id-0",
      },
      Object {
        "id": "some-file-diory-id-1",
      },
      Object {
        "id": "some-file-diory-id-2",
      },
      Object {
        "id": "some-file-diory-id-3",
      },
      Object {
        "id": "some-file-diory-id-4",
      },
      Object {
        "id": "some-file-diory-id-5",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "new-folder",
  },
  "old-folder-uuid": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "date": "2022-01-01T00:00:00.000Z",
    "id": "old-folder-uuid",
    "image": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOMPvD6PwAGiwMHcHyXEAAAAABJRU5ErkJggg==",
    "links": Array [
      Object {
        "id": "some-existing-file-diory-id-0",
      },
      Object {
        "id": "some-existing-file-diory-id-1",
      },
      Object {
        "id": "some-existing-file-diory-id-2",
      },
      Object {
        "id": "some-existing-file-diory-id-3",
      },
      Object {
        "id": "some-existing-file-diory-id-4",
      },
    ],
    "modified": "2023-01-01T00:00:00.000Z",
    "text": "old-folder",
  },
  "some-file-diory-id-0": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-0",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-file-diory-id-1": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-1",
    "modified": "2022-01-01T00:00:00.000Z",
  },
  "some-file-diory-id-2": Object {
    "created": "2022-01-01T00:00:00.000Z",
    "id": "some-file-diory-id-2",
    "modified": "2022-01-01T00:00:00.000Z",
  },
}
`;
